Updated API and added search